--- a/Home.html
+++ b/Home.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNES - Página principal</title>
 </head>
-<body>
-    
+
+<body background="c:\Users\vitor\OneDrive\Documentos\estudos\html-css\Projeto1UNES\fundo.png">
 </body>
+
 </html>
