--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNES - Página principal</title>
+    <title>UNES - Página principaal</title>
 </head>
 
 <body background="c:\Users\vitor\OneDrive\Documentos\estudos\html-css\Projeto1UNES\fundo.png">
