--- a/Home.html
+++ b/Home.html
@@ -4,10 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNES - Página principaal</title>
+    <title>UNES - Página principal</title>
 </head>
 
-<body background="c:\Users\vitor\OneDrive\Documentos\estudos\html-css\Projeto1UNES\fundo.png">
+<body background="..//fundo2.png">
+
+    <table border="0" width="900" align="center">
+
+        <tr>
+            <td height="89"><img src="..//logo.png"></td>
+            <td align="right">
+                <a href="">Home</a> |
+                <a href="./p2.html">Quem Somos</a> |
+                <a href="./contato.html">Contato</a> |
+            </td>
+        </tr>
+
+        <tr>
+            <td colspan="2">
+                <img src="..//capa.png">
+            </td>
+        </tr>
+    </table>
 </body>
 
 </html>
