--- a/Home.html
+++ b/Home.html
@@ -25,6 +25,26 @@
                 <img src="..//capa.png">
             </td>
         </tr>
+
+        <tr>
+            <td colspan="2">
+
+                <h2>Sobre a Universidade</h2>
+                    <p>
+                        Lorem <strong>ipsum dolor</strong> sit <em>amet</em>, consectetur adipiscing elit. Aenean laoreet sollicitudin mi sit amet mollis. Donec ac ex ipsum. Maecenas tempor, felis ac fringilla tristique, libero ligula placerat sem, vel porta eros purus in erat. Quisque elit metus, malesuada in lectus in, ultrices accumsan augue. Mauris tristique erat quis nisi sagittis, vestibulum malesuada enim ullamcorper. Fusce rutrum cursus rhoncus. Donec blandit orci placerat metus rutrum elementum. Ut eros nulla, vehicula eu aliquam non, commodo quis nisi. Fusce viverra non risus ac convallis. Mauris sollicitudin metus eu facilisis ornare. Nam velit est, blandit a viverra non, cursus eget ante. In commodo metus non dolor pellentesque eleifend eget at odio. Morbi nisl orci, ultrices nec felis sed, condimentum pellentesque eros.
+                    </p>
+
+                    <p>
+                        Pellentesque condimentum tempor lobortis. Fusce sit amet vestibulum sem, eget pellentesque metus. Pellentesque auctor pretium ante a accumsan. In posuere, erat quis vulputate interdum, velit tellus facilisis est, nec semper augue neque quis odio. Mauris congue pharetra nibh. Donec volutpat a purus nec mollis. In hac habitasse platea dictumst.
+                    </p>
+            </td>
+        </tr>
+
+        <tr>
+            <td colspan="2" align="center">
+                <h4>Todos os direitos reservados</h4>
+            </td>
+        </tr>
     </table>
 </body>
 
