--- a/p2.html
+++ b/p2.html
@@ -9,12 +9,12 @@
 
 <body background="..//fundo2.png">
 
-    <table border="1" width="900" align="center">
+    <table border="0" width="900" align="center">
 
         <tr>
             <td height="89"><img src="..//logo.png"></td>
             <td align="right">
-                <a href="..//Home.html">Home</a> |
+                <a href="./Home.html">Home</a> |
                 <a href="">Quem Somos</a> |
                 <a href="./contato.html">Contato</a> |
             </td>
@@ -36,6 +36,20 @@
                         <li>Ótima localização</li>
                     </ol>
                     <hr>
+
+                    <h2>Objetivos</h2>
+
+                    <p>Lorem <strong>ipsum dolor</strong> sit <em>amet</em>, consectetur adipiscing elit. Aenean laoreet sollicitudin mi sit amet mollis. Donec ac ex ipsum. Maecenas tempor, felis ac fringilla tristique, libero ligula placerat sem, vel porta eros purus in erat. Quisque elit metus, malesuada in lectus in, ultrices accumsan augue. Mauris tristique erat quis nisi sagittis, vestibulum malesuada enim ullamcorper.
+                    </p>
+            </td>
+        </tr>
+
+        <tr>
+            <td colspan="2" align="center">
+                <h4>Todos os direitos</h4>
             </td>
         </tr>
     </table>
+</body>
+
+</html>
